--- a/CSS/Calculator/index.html
+++ b/CSS/Calculator/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <title> Calculator</title>
+        <title> Digital Calculator </title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
