--- a/CSS/Css1/index.html
+++ b/CSS/Css1/index.html
@@ -3,8 +3,46 @@
     <head>
         <meta charset="UTF-8">
         <title> CSS Animation Created By Ram </title>
-        <link rel="stylesheet" type="text/css" href="Style.css">
+        <link rel="stylesheet" type="text/css">
     </head>
+    <style>
+        *{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+
+}
+.container
+{
+    position: relative;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+.container .ring
+{
+    position: relative;
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    border: 4px solid #080808;
+}
+.container .ring:nth-child(3)
+{
+    position:absolute;
+
+    top: -66.66px;
+}
+    </style>
     <body>
         <div class="container">
         <div class="ring"> </div>
