--- a/Calculator.html
+++ b/Calculator.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lan="en-in">
     <head>
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <title> Calculator</title>
+        <title> Calculator </title>
         <link rel="stylesheet">
     </head>
     <style>
