Circul-Combination.html

--- a/Circul-Combination.html
+++ b/Circul-Combination.html
@@ -2,12 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title> CSS Animation Created By Ram </title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css">
         <title> Circul Combination </title>
     </head>
     <style>
-        *{
+    *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -58,8 +58,7 @@ body
 {
  background-color:#ed6938; 
 }
-
-    </style>
+</style>
     <body>
        
         <div class="container">
