--- a/CSS/css5/index.html
+++ b/CSS/css5/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport"
         content="width-device-width,initial-scale=1.0">
-        <title> Document</title>
+        <title> Number Scroll Bar </title>
         <link rel="stylesheet" href="style.css">
         </head>
         <body>
