--- a/logo.html
+++ b/logo.html
@@ -2,11 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>
-        Document
-    </title>
+    <title> LOGO </title>
     <style>
         *{
             margin: 0;
@@ -46,17 +43,7 @@
                 transform: translateX(15px);
             }
         }
-        .container::after{
-            content: '';
-            position: absolute;
-            left: 50%;
-            transform: translateX(-50);
-            top: 400px;
-            width: 800px;
-            height: 800px;
-            background: #fe4e4e;
-            border-radius: 50%;
-        }
+     
         .container .loader{
             position: relative;
             width: 200px;
@@ -87,17 +74,7 @@
             border-bottom-left-radius: 100px;
             border-bottom-right-radius: 100px;
         }
-        .container .loader .ball{
-            position:absolute;
-            top: 50px;
-            left: -15px;
-            width: 40px;
-            height: 40px;
-            background:#fff ;
-            border-radius: 50%;
-            transform: translate(-100%);
-            animation: animateBell 4s ease-in-out infinite;
-        }
+      
         @keyframes animateBall{
             0%
             {
